# goit-web-hw-14

./: .coverage  main.py  pyproject.toml  test.db
docs/: conf.py  index.rst
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
migrations/: env.py
migrations/versions/: 145c35e5afe4_init.py  88080dbcd2af_add_table_user.py  c05353f89524_add_verify_of_user.py
postgres-data/: postmaster.pid
postgres-data/base/1/: 2619  2696  2840  2841  pg_internal.init.33  pg_internal.init.51
postgres-data/base/16384/: 1247  1249  1259  16388  16391  16393  16394  16398  16400  16401  16402  16403  16404  16410  16412  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  2701  2702  2703  (+9 more)
postgres-data/base/5/: pg_internal.init  (+4 more)
postgres-data/global/: 1260  1262  2671  pg_control  pg_internal.init  pg_internal.init.32  pg_internal.init.34  pg_internal.init.35  pg_internal.init.38  pg_internal.init.41  pg_internal.init.46  pg_internal.init.47  pg_internal.init.48  pg_internal.init.67
src/conf/: config.py  messages.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/schemas/: contact.py  user.py
src/services/: auth.py  email.py
src/templates/: index.html
tests/: conftest.py  test_e2e_auth.py  test_e2e_contacts.py  test_e2e_users.py  test_unit_repository_contacts.py  test_unit_repository_users.py
(+3 files in other folders)
